# bms-resource-scripts

./: .gitignore  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
bms/: __init__.py  encoding.py  parse.py  work.py
fs/: __init__.py  input.py  move.py  name.py  rawpack.py  sync.py
media/: audio.py  video.py
options/: __init__.py  base.py  bms_events.py  bms_folder.py  bms_folder_bigpack.py  bms_folder_event.py  bms_folder_media.py  rawpack.py
scripts/: pack.py
wasted/: aery_fix.py
