[project]
name = "boftt-pack-generator-scripts"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "py7zr>=1.0.0",
    "rarfile>=4.2",
    "openpyxl>=3.1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    # space before : (needed for how black formats slicing)
    "E203",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
